Fix comment text on small screen

--- a/sass/comment.sass
+++ b/sass/comment.sass
@@ -6,7 +6,7 @@
   margin-bottom: 10px
 
 .comment-text
-  margin-right: 30px
+  margin: 30px
 
 .comment-meta
   display: flex
